# sphrosyne

./: .gitignore  .gitmodules  Cargo.toml  README.md
sphrosyne/: Cargo.toml
sphrosyne/src/: controller.js  main.rs  request.rs  server.rs  style.css
vigem-client/: Cargo.toml
vigem-client-c/: Cargo.toml
vigem-client-c-sys/: Cargo.toml
vigem-client-c-sys/src/: lib.rs
vigem-client-c/src/: client.rs  error.rs  gamepad_state.rs  lib.rs
vigem-client-c/tests/: test_notification.rs
vigem-client-sys/: Cargo.toml  build.rs
vigem-client-sys/src/: main.rs  wrapper.h
vigem-client/src/: client.rs  error.rs  gamepad_state.rs
