[package]
name = "sphrosyne"
version = "1.0.0"
edition = "2018"

[dependencies]
base64 = "0.13.0"
build_html = "1.1.0"
eyre = "0.6.5"
gethostname = "0.2.1"
image = "0.23.14"
qrcodegen = "1.7.0"
serde = "1.0.129"
serde_json = "1.0.66"
sha1 = "0.6.0"
slab = "0.4.4"
slog = { version = "2.7.0", features = [ "max_level_trace", "release_max_level_debug" ] }
slog-async = "2.7.0"
slog-term = "2.8.0"
tiny_http = "0.8.2"
tungstenite = "0.15.0"
vigem-client-c = { path = "../vigem-client-c", features=[ "serde" ] }
