[package]
name = "vigem-client-c"
version = "0.1.0"
authors = ["PurpleMyst <PurpleMyst@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bitflags = "1.3.2"
serde = { version = "1.0.129", optional = true, features = [ "derive" ] }
thiserror = "1.0.26"
vigem-client-c-sys = { path = "../vigem-client-c-sys" }
